--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,8 +12,13 @@
         .is-invalid {
             color: red;
         }
+
         .invalid-feedback {
             color: red;
+        }
+
+        .mb-3 {
+            margin-bottom: 3px;
         }
     </style>
     <script th:inline="javascript">
@@ -37,10 +42,12 @@
             </div>
             <form th:action="@{/login}" method="post" id="loginForm">
                 <div class="input-group mb-3">
-                    <input type="email" class="form-control" value="user@yeah.net" name="username" placeholder="Email" autocomplete="off">
+                    <input type="email" class="form-control" value="user@yeah.net" name="username" placeholder="Email"
+                           autocomplete="off">
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" id="password" name="password" value="123456" class="form-control" maxlength="25" placeholder="Password"
+                    <input type="password" id="password" name="password" value="123456" class="form-control"
+                           maxlength="25" placeholder="Password"
                            autocomplete="off">
                 </div>
                 <div class="row">
